# webscraping-data-project

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: main.yml
ETL/: index.html
app/: extract.py  extract_attempt2.py  extract_fail.py  main.py  web_scraper.py
app/datasource/: web_scraper.py
app/etl/: extract.py  load.py  transform.py
app/scripts/: transformer.py
data/raw/: gulfood_exhibitors_page_01.csv  gulfood_exhibitors_page_02.csv  gulfood_exhibitors_page_03.csv  gulfood_exhibitors_page_04.csv  gulfood_exhibitors_page_05.csv  gulfood_exhibitors_page_06.csv  gulfood_exhibitors_page_07.csv  gulfood_exhibitors_page_08.csv  gulfood_exhibitors_page_09.csv  gulfood_exhibitors_page_10.csv  gulfood_exhibitors_page_11.csv  gulfood_exhibitors_page_12.csv  gulfood_exhibitors_page_13.csv  gulfood_exhibitors_page_14.csv  gulfood_exhibitors_page_15.csv  gulfood_exhibitors_page_16.csv  gulfood_exhibitors_page_17.csv  gulfood_exhibitors_page_18.csv  gulfood_exhibitors_page_19.csv  gulfood_exhibitors_page_20.csv  gulfood_exhibitors_page_21.csv  gulfood_exhibitors_page_22.csv  gulfood_exhibitors_page_23.csv  gulfood_exhibitors_page_24.csv  gulfood_exhibitors_page_25.csv  gulfood_exhibitors_page_26.csv  gulfood_exhibitors_page_27.csv  gulfood_exhibitors_page_28.csv  gulfood_exhibitors_page_29.csv  (+16 more)
docs/: index.md  instructions.md  main_etl.md  scripts.md  workflow.md
instructions/: index.html
main_etl/: index.html
scripts/: index.html
search/: search_index.json
tests/: test_webscraping.py
workflow/: index.html
