[tool.poetry]
name = "webscraping-data-project"
version = "0.1.0"
description = ""
authors = ["Felipe Sebben <felipesebben@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
taskipy = "^1.12.2"
pytest = "^8.0.0"
selenium = "^4.17.2"
black = "^24.1.1"
isort = "^5.13.2"
pre-commit = "^3.6.0"
requests-mock = "^1.11.0"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
openpyxl = "^3.1.2"
mkdocs = "^1.5.3"
mkdocstrings-python = "^1.8.0"
pygments = "^2.17.2"
mkdocs-material = "^9.5.9"
pymdown-extensions = "^10.7"
mkdocs-bootstrap386 = "^0.0.2"
mkdocs-mermaid2-plugin = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "isort app/ tests/ && black app/ tests/"
commit = "git add . && pre-commit run"
test = "pytest tests -v"
run = "python app/main.py"
